# prime_table

./: .gitignore  README.md  primeTable.cabal
app/: Main.hs
src/: Lib.hs  PrimeSieve.hs
test/: PrimeSieveSpec.hs
tests/: PrimeSieveSpec.hs  PrimeSieveSpec.hs~
