name:                primeTable
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/primeTable#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PrimeSieve
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable primeTable-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , primeTable
  default-language:    Haskell2010

test-suite primeTable-test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Werror
  cpp-options:         -DTEST
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , primeTable
                     , hspec
                     , QuickCheck
                     , arithmoi
                     , hpc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/primeTable
